--- a/blockchain/package.json
+++ b/blockchain/package.json
@@ -3,7 +3,8 @@
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "hardhat": "^2.22.18",
-    "@openzeppelin/contracts": "^4.8.0"
+    "@openzeppelin/contracts": "^4.8.0",
+    "dotenv": "^16.4.5"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.8.0"
