--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,9 +26,10 @@
     "react-icons": "^5.2.1",
     "react-is": "^18.3.1",
     "react-router-dom": "^6.25.1",
-    "react-scripts": "^5.0.0",
+    "react-scripts": "^5.0.1",
     "stylis": "^4.3.2",
     "stylis-plugin-rtl": "^2.1.1",
+    "viem": "^2.22.17",
     "web-vitals": "^4.2.2"
   },
   "scripts": {
@@ -64,7 +65,8 @@
     "anymatch": "^3.1.3",
     "chokidar": "^3.6.0",
     "gh-pages": "^6.1.1",
-    "micromatch": "^4.0.7"
+    "micromatch": "^4.0.7",
+    "typescript": "^5.7.3"
   },
   "main": "prettier.config.js",
   "keywords": [],
